Fix multiple issues in the new implementation of the filter stroke

1) Apply rect should not be bigger than the size of the image,
   otherwise bug 438852 appears.

2) When cancelling the filtering to apply a different filter
   configuration, we should should inhibit the updates to avoid
   flickering. It became broken after porting to undo-based
   stretegy (because this strategy uses mutated jobs).

3) When silently cancelling the stroke we should save the updates
   somewhere externally, so that the next stroke can update this area.
   Previously, this problem was solved by ExtraCleanUpUpdates, which
   became broken during the refactoring. Now there is a shared data
   structure ExternalCancelUpdatesStorage, which passes proper update
   rects between the strokes.

BUG:438852